<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="bottom"
    tools:context="com.sub77.romaddons.MountActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvm1"
        android:id="@+id/TextViewm1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btm1"
        android:id="@+id/btn_m1"
        android:layout_below="@+id/TextViewm1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="onClick" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btdb1"
        android:id="@+id/btn_db1"
        android:layout_below="@+id/btn_m1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="onClick" />
</RelativeLayout>
