
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <!--
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb1"
        android:key="@string/cb1"
        android:id="@+id/CheckBox1"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:checked="true"
        android:enabled="true"
        android:onClick="prefseditor.commit()" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cb1_key"
        android:id="@+id/TextView1"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true" />
        -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv1"
        android:id="@+id/TextView2"
        android:layout_below="@+id/TextView1"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt1"
        android:id="@+id/btn_1"
        android:layout_below="@+id/TextView2"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="onClick" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt2"
        android:id="@+id/btn_2"
        android:layout_below="@+id/btn_1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="onClick" />
    <!--
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="auslesen"
        android:id="@+id/btn_read"
        android:layout_below="@+id/btn_save"
        android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Löschen"
            android:id="@+id/btn_delete"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp" />-->


</RelativeLayout>
